[backend] Implement Create and Read operation for note per chapter
